--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p>Oranges are not my favorite fruit.</p>
 <center>
 <p>Oranges are orange.</p>
-<a href="second.html"><button>Go to second page</button></a>
+<a href="second.html"><button>Button</button></a>
 </center>
 </body>
 </html>
