--- a/second.html
+++ b/second.html
@@ -7,5 +7,6 @@
 <p>This is a pargraph about Ky</p>
 <hr />
 <p>This is a paragraph about spinach</p>
+<a href = "index.html"><button>Button</button></a>
 </body>
 </html>
